--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Change these
-PS_ADMIN_EMAIL=tero@vilkas.fi
+PS_ADMIN_EMAIL=tero@email.invalid
 PS_ADMIN_PASSWD=adminadmin
 PRESTASHOP_PATH=/home/kode/dev/prestashop
 MY_MODULE_NAME=kode_module
